<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoodMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="serve_button_text">Serve Local Food</string>
    <string name="find_button_text">Find Local Food</string>
    <string name="title_activity_serve">Serve Food</string>
    <string name="title_activity_edit_server">Edit Server</string>
    <string name="server_name_label">Name</string>
    <string name="server_phone_label">Phone</string>
    <string name="server_address_label">Address</string>
    <string name="server_cusine_label">Cuisine</string>
    <string name="server_setup_button">Edit Server</string>
    <string name="title_activity_find">Find Food</string>
    <string name="title_activity_add_menu">Add Menu</string>
    <string name="menu_name_label">Name</string>
    <string name="menu_description_label">Description</string>
    <string name="menu_quantity_label">Quantity</string>
    <string name="menu_price_label">Price</string>
    <string name="menu_photo_label">Picture</string>
    <string name="menu_add_button">Add Menu</string>
    <string name="menu_list_button">List Menu</string>
    <string name="order_list_button">List Orders</string>
    <string name="title_activity_list_menu">List Menu</string>
    <string name="title_activity_edit_menu">Edit Menu</string>
    <string name="preference_file_key">com.tekdi.foodmap.info</string>
    <string name="preference_server_id_key">preference_file_server_id</string>
    <string name="order_menu">Order</string>
    <string name="order_confirm">Confirm</string>
    <string name="order_clear">Clear</string>
    <string name="order_add">Add</string>
    <string name="order_send">Send</string>
    <string name="order_receive">Receive</string>
    <string name="order_ready">Ready</string>
    <string name="order_rate">Rate</string>
    <string name="order_pay">Pay</string>
    <string name="order_closed">Closed</string>
    <string name="order_cancel">Cancel</string>
    <string name="order_update">Update</string>
    <string name="order_status_finder_new">Press SEND when order is complete</string>
    <string name="order_status_server_new"></string>
    <string name="order_status_finder_send">Waiting for Caterer to acknowledge order</string>
    <string name="order_status_server_send">Press Accept or Cancel to acknowledge order </string>
    <string name="order_status_finder_receive">Caterer is processing order</string>
    <string name="order_status_server_receive">Press READY when order is ready</string>
    <string name="order_status_finder_ready">Order is ready for pickup</string>
    <string name="order_status_server_ready">Waiting for order to be picked up</string>
    <string name="order_status_finder_rate">Press RATE to rate the order</string>
    <string name="order_status_server_rate">Waiting for rating</string>
    <string name="order_status_finder_close">Order is complete</string>
    <string name="order_status_server_close">Order is complete</string>
    <string name="order_status_finder_cancel">Order is cancelled</string>
    <string name="order_status_server_cancel">Order is cancelled</string>
    <string name="order_button_send">Send</string>
    <string name="order_button_receive">Receive</string>
    <string name="order_button_ready">Ready</string>
    <string name="order_button_rate">Rate</string>
    <string name="order_button_close">Close</string>
    <string name="order_button_cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="title_activity_order">New Order</string>
    <string name="title_activity_list_order">ListOrderActivity</string>
    <string name="order_list_refresh">Refresh</string>
    <string name="currency_symbol">$</string>
    <string name="list_order_button_text">Check Order</string>
    <string name="action_accept_menu">Select Menu Item</string>
    <string name="action_new_menu">Add</string>
    <string name="action_edit_menu">Edit Menu Item</string>
    <string name="action_remove_menu">Remove Menu Item</string>
    <string name="title_activity_payment">Payment</string>
    <string name="card_number_label">Card Number</string>
    <string name="card_expiry_label">Expiry</string>
    <string name="card_cvc_label">CVC</string>





    <string name="addPayment">Add Payment Method</string>
    <string name="paymentMethods">Payment Methods</string>
    <string name="endingIn">Card ending in </string>
    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="validationErrors">Validation Errors</string>
   
    <string name="cardNumber">Card Number</string>
    <string name="save">Save</string>
    <string name="cvc">CVC</string>
    <string name="ok">OK</string>
</resources>
