<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item android:id="@+id/order_add"
        android:title="@string/order_add"
        android:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/order_send"
        android:title="@string/order_send"
        android:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/order_clear"
        android:title="@string/order_clear"
        android:showAsAction="never"
        android:visible="false"/>

    <item android:id="@+id/order_cancel"
        android:title="@string/order_cancel"
        android:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/order_update"
        android:title="@string/order_update"
        android:showAsAction="ifRoom"
        android:visible="false"/>
</menu>